methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:11: error: not found: value vuBaggle
      vuBaggle = true
      ^MethodsReturning:5: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i <- 1 to 6) {
         ^