methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  
  var vuBagg:Boolean = false
  
  for (i <- 1 to 6) {
    
    avance();
    
    if (estSurBiscuit()) {
      
      vuBaggle = true
      
    }
    
  }
  
}